Center align the Hello World header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
  <title>Document</title>
 </head>
 <body>
- <H1>Hello World!!!!</H1>   
+ <aling=center><H1>Hello World!!!!</H1></aling>aling=center>
 </body>
 </html>
