--- a/index.html
+++ b/index.html
@@ -31,114 +31,128 @@
         .gallery img{width:calc(50% - 4px);border-radius:8px;height:120px;object-fit:cover}
         .contact .item{display:flex;gap:12px;align-items:center}
         .small{font-size:13px;color:#7a7a7a}
-    </style>
-</head>
-<body>
-    <header>
-        <div class="logo">
-            <div class="mark" aria-hidden="true"></div>
-            <div>
-                <div>Sunkiss</div>
-                <div class="small">Салон загара</div>
-            </div>
-        </div>
-        <nav>
-            <a href="#services">Услуги</a>
-            <a href="#gallery">Галерея</a>
-            <a href="#contact">Контакты</a>
-        </nav>
-        <div style="display:flex;gap:10px;align-items:center">
-            <a class="btn" href="#contact">Записаться</a>
-        </div>
-    </header>
+    <!DOCTYPE html>
+    <html lang="ru">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Sunkiss — Салон загара</title>
+        <style>
+            :root{--bg:#FFF8F0;--accent:#F48C06;--muted:#6b6b6b;--card:#ffffff}
+            *{box-sizing:border-box}
+            body{margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;background:var(--bg);color:#222}
+            header{display:flex;justify-content:space-between;align-items:center;padding:18px 24px}
+            .brand{display:flex;align-items:center;gap:12px}
+            .sun{width:46px;height:46px;border-radius:50%;background:linear-gradient(135deg,#fff4e6,#ffd08a);display:flex;align-items:center;justify-content:center;box-shadow:0 6px 18px rgba(240,140,6,0.12)}
+            nav a{margin-left:14px;color:#333;text-decoration:none;font-weight:600}
 
-    <section class="hero">
-        <div class="hero-inner">
-            <div class="hero-card">
-                <h1>Добро пожаловать в Sunkiss</h1>
-                <p class="lead">Премиум‑солярий и уход за кожей — ровный загар без риска. Удобное расположение, гибкое расписание и опытные мастера.</p>
-                <div class="buttons">
-                    <a class="btn" href="#contact">Записаться онлайн</a>
-                    <a class="btn alt" href="#services">Услуги и цены</a>
-                </div>
-            </div>
+            .wrap{max-width:1100px;margin:28px auto;padding:0 20px}
+            .hero{display:flex;gap:24px;align-items:center}
+            .hero-left{flex:1}
+            .hero-right{width:360px}
+            h1{font-size:36px;margin:0 0 10px}
+            p.lead{color:var(--muted);margin:0 0 16px}
+            .cta{display:inline-block;background:var(--accent);color:#fff;padding:12px 16px;border-radius:12px;text-decoration:none;font-weight:700}
 
-            <div style="display:flex;gap:18px;flex-direction:column">
-                <div class="card">
-                    <h3>Почему выбирают нас</h3>
-                    <ul style="margin:8px 0 0;padding-left:18px;color:#555">
-                        <li>Современные солярии премиум-класса</li>
-                        <li>Индивидуальный подбор курса</li>
-                        <li>Чистота и комфорт</li>
-                    </ul>
-                </div>
-                <div class="card">
-                    <h3>Акция</h3>
-                    <p style="margin:8px 0 0">Первое посещение — скидка 20% при записи по телефону.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+            .services{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:16px;margin:22px 0}
+            .svc{background:var(--card);padding:16px;border-radius:12px;box-shadow:0 6px 18px rgba(16,24,40,0.04)}
+            .svc h3{margin:0 0 8px}
+            .price{font-weight:700;color:var(--accent)}
 
-    <main>
-        <section id="services" class="services">
-            <div class="card">
-                <h3>Солярий</h3>
-                <p class="small">Оборудование последнего поколения, безопасные лампы, контролируемое время.</p>
-                <p style="margin:8px 0 0;font-weight:600">от 400 ₽ / сеанс</p>
-            </div>
-            <div class="card">
-                <h3>Спрей‑загар</h3>
-                <p class="small">Мгновенный бронзовый оттенок без УФ‑излучения.</p>
-                <p style="margin:8px 0 0;font-weight:600">от 1200 ₽</p>
-            </div>
-            <div class="card">
-                <h3>Уход за кожей</h3>
-                <p class="small">Пилинги, увлажняющие маски и консультации по домашнему уходу.</p>
-                <p style="margin:8px 0 0;font-weight:600">по записи</p>
-            </div>
-            <div class="card">
-                <h3>Абонементы</h3>
-                <p class="small">Экономные пакеты посещений для регулярного загара.</p>
-                <p style="margin:8px 0 0;font-weight:600">от 3500 ₽ / мес.</p>
-            </div>
-        </section>
+            .gallery{display:flex;gap:10px;margin-top:18px}
+            .gallery img{width:100%;height:120px;object-fit:cover;border-radius:10px}
 
-        <section id="gallery" style="padding:0 20px 20px">
-            <h2 style="margin:18px 0 12px">Галерея</h2>
-            <div class="gallery">
-                <img src="https://images.unsplash.com/photo-1504198453319-5ce911bafcde?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Галерея 1">
-                <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Галерея 2">
-                <img src="https://images.unsplash.com/photo-1519710164239-da123dc03ef4?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Галерея 3">
-                <img src="https://images.unsplash.com/photo-1526403224749-7a7f4e6d0d8b?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Галерея 4">
-            </div>
-        </section>
+            .contact{display:grid;grid-template-columns:1fr 340px;gap:18px;margin-top:22px}
+            .contact-card{background:var(--card);padding:18px;border-radius:12px}
+            .contact-card h3{margin-top:0}
+            .contact-list{line-height:1.6;color:var(--muted)}
 
-        <section id="contact" class="contact">
-            <div class="grid-2">
+            footer{margin:36px 0;text-align:center;color:var(--muted)}
+
+            @media (max-width:880px){.hero{flex-direction:column}.contact{grid-template-columns:1fr}.hero-right{width:100%}}
+        </style>
+    </head>
+    <body>
+        <header class="wrap">
+            <div class="brand">
+                <div class="sun" aria-hidden="true">☀️</div>
                 <div>
-                    <h2>Контакты</h2>
-                    <div class="item"><strong>Адрес:</strong>&nbsp;ул. Перемоги, 12, Житомир</div>
-                    <div class="item"><strong>Телефон:</strong>&nbsp;<a href="tel:+74951234567">+7 (495) 123-45-67</a></div>
-                    <div class="item"><strong>Часы работы:</strong>&nbsp;Ежедневно 10:00–22:00</div>
-                    <p class="small" style="margin-top:12px">Приходите без записи или забронируйте удобное время по телефону.</p>
-                    <div style="margin-top:14px">
-                        <a class="btn" href="tel:+74951234567">Позвонить</a>
-                        <a class="btn alt" href="mailto:info@sunkiss.example">Написать</a>
+                    <div style="font-weight:800">Sunkiss</div>
+                    <div style="font-size:12px;color:var(--muted)">Салон загара</div>
+                </div>
+            </div>
+            <nav>
+                <a href="#services">Услуги</a>
+                <a href="#gallery">Галерея</a>
+                <a class="cta" href="#contact">Записаться</a>
+            </nav>
+        </header>
+
+        <main class="wrap">
+            <section class="hero">
+                <div class="hero-left">
+                    <h1>Теплый загар и забота о коже</h1>
+                    <p class="lead">Качественные процедуры, индивидуальный подход и комфортная атмосфера в центре Киева.</p>
+                    <a class="cta" href="#contact">Записаться</a>
+                    <div style="margin-top:12px;color:var(--muted)">или звоните: <strong style="color:#222">+38 (050) 123‑4567</strong> — Светлана Петровна</div>
+                </div>
+                <div class="hero-right">
+                    <div style="background:linear-gradient(180deg,#fff6eb,#ffe1b8);padding:18px;border-radius:12px;box-shadow:0 8px 30px rgba(16,24,40,0.06)">
+                        <h3 style="margin:0 0 8px">Специальное предложение</h3>
+                        <p style="margin:0;color:var(--muted)">Первое посещение — скидка 20% на любой сеанс.</p>
+                    </div>
+                </div>
+            </section>
+
+            <section id="services" class="services">
+                <div class="svc">
+                    <h3>Солярий</h3>
+                    <p class="price">от 150 ₴ / сеанс</p>
+                    <p style="margin-top:8px;color:var(--muted)">Профессиональные лампы, безопасный режим и чистота кабины.</p>
+                </div>
+                <div class="svc">
+                    <h3>Спрей‑загар</h3>
+                    <p class="price">от 450 ₴</p>
+                    <p style="margin-top:8px;color:var(--muted)">Равномерный бронзовый оттенок моментально.</p>
+                </div>
+                <div class="svc">
+                    <h3>Уход за кожей</h3>
+                    <p class="price">от 300 ₴</p>
+                    <p style="margin-top:8px;color:var(--muted)">Пилинги, маски и профессиональные процедуры.</p>
+                </div>
+                <div class="svc">
+                    <h3>Абонементы</h3>
+                    <p class="price">от 1200 ₴ / мес.</p>
+                    <p style="margin-top:8px;color:var(--muted)">Экономичные пакеты для регулярных клиентов.</p>
+                </div>
+            </section>
+
+            <section id="gallery" class="gallery">
+                <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="1">
+                <img src="https://images.unsplash.com/photo-1521334884684-d80222895322?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="2">
+                <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="3">
+                <img src="https://images.unsplash.com/photo-1499084732479-de2c02d45fc4?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="4">
+            </section>
+
+            <section id="contact" class="contact">
+                <div class="contact-card">
+                    <h3>Контакты</h3>
+                    <div class="contact-list">
+                        <div><strong>Адрес:</strong> м. Київ, вул. Перемоги, 12 (м. Святошино)</div>
+                        <div><strong>Телефон:</strong> <a href="tel:+380501234567">+38 (050) 123‑4567</a> — Светлана Петровна</div>
+                        <div><strong>Часы роботи:</strong> щодня 10:00–22:00</div>
                     </div>
                 </div>
 
-                <aside style="background:white;border-radius:12px;padding:12px;box-shadow:0 6px 18px rgba(43,43,43,.04)">
-                    <h3 style="margin-top:0">Где мы</h3>
-                    <div style="width:100%;height:220px;border-radius:8px;overflow:hidden;background:#eee;display:flex;align-items:center;justify-content:center;color:#999">Карта (замена iframe)</div>
-                    <p class="small" style="margin-top:12px">Парковка рядом. Метро — 5 минут пешком.</p>
+                <aside style="background:#fff;padding:16px;border-radius:12px;box-shadow:0 6px 18px rgba(16,24,40,0.04)">
+                    <h3 style="margin-top:0">Карта</h3>
+                    <div style="width:100%;height:220px;background:#eee;border-radius:8px;display:flex;align-items:center;justify-content:center;color:#999">(Iframe карты можно вставить здесь)</div>
                 </aside>
-            </div>
-        </section>
-    </main>
+            </section>
+        </main>
 
-    <footer>
-        © Sunkiss — Салон загара. Все права защищены.
-    </footer>
-</body>
-</html>
+        <footer>
+            © Sunkiss — Салон загара · Київ
+        </footer>
+    </body>
+    </html>
