--- a/index.html
+++ b/index.html
@@ -5,154 +5,175 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunkiss — Салон загара</title>
     <style>
-        :root{--bg:#FFF7E6;--accent:#FFB74D;--dark:#2b2b2b}
+        :root{--bg:#FFF8F0;--accent:#F48C06;--muted:#6b6b6b;--card:#ffffff}
         *{box-sizing:border-box}
-        body{margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;background:var(--bg);color:var(--dark);-webkit-font-smoothing:antialiased}
-        header{background:linear-gradient(180deg,#FFDFAF 0%, #FFECCF 60%);padding:18px 20px;display:flex;align-items:center;justify-content:space-between;gap:12px}
-        .logo{display:flex;align-items:center;gap:12px;font-weight:700}
-        .logo .mark{width:44px;height:44px;background:radial-gradient(circle at 30% 30%, #fff8e6 0%, #ffd26a 30%, #ff9f1c 100%);border-radius:50%;box-shadow:0 4px 12px rgba(255,159,28,.18)}
-        nav{display:none}
-        .hero{min-height:60vh;display:flex;align-items:center;justify-content:center;padding:48px 20px;background:linear-gradient(180deg, rgba(255,183,77,0.12), rgba(255,159,28,0.06));}
-        .hero-inner{max-width:1000px;width:100%;display:grid;grid-template-columns:1fr;gap:20px;align-items:center}
-        .hero-card{background:white;border-radius:14px;padding:28px;box-shadow:0 8px 30px rgba(43,43,43,.08)}
-        h1{margin:0 0 8px;font-size:28px}
-        p.lead{margin:0 0 16px;color:#6b6b6b}
-        .buttons{display:flex;gap:12px;flex-wrap:wrap}
-        .btn{background:var(--accent);color:#fff;padding:12px 18px;border-radius:10px;text-decoration:none;font-weight:600}
-        .btn.alt{background:transparent;color:var(--dark);border:2px solid rgba(43,43,43,.08)}
-        .services{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:18px;padding:28px 20px}
-        .card{background:white;padding:18px;border-radius:12px;box-shadow:0 6px 18px rgba(43,43,43,.04)}
-        .card h3{margin:0 0 8px}
-        .contact{display:flex;flex-direction:column;gap:12px;padding:20px}
-        footer{padding:18px 20px;text-align:center;color:#6b6b6b;font-size:14px}
-        .grid-2{display:grid;grid-template-columns:1fr 320px;gap:20px}
-        @media (max-width:880px){.grid-2{grid-template-columns:1fr}.hero-inner{padding:0}}
-        .gallery{display:flex;gap:8px;flex-wrap:wrap}
-        .gallery img{width:calc(50% - 4px);border-radius:8px;height:120px;object-fit:cover}
-        .contact .item{display:flex;gap:12px;align-items:center}
-        .small{font-size:13px;color:#7a7a7a}
-    <!DOCTYPE html>
-    <html lang="ru">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sunkiss — Салон загара</title>
-        <style>
-            :root{--bg:#FFF8F0;--accent:#F48C06;--muted:#6b6b6b;--card:#ffffff}
-            *{box-sizing:border-box}
-            body{margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;background:var(--bg);color:#222}
-            header{display:flex;justify-content:space-between;align-items:center;padding:18px 24px}
-            .brand{display:flex;align-items:center;gap:12px}
-            .sun{width:46px;height:46px;border-radius:50%;background:linear-gradient(135deg,#fff4e6,#ffd08a);display:flex;align-items:center;justify-content:center;box-shadow:0 6px 18px rgba(240,140,6,0.12)}
-            nav a{margin-left:14px;color:#333;text-decoration:none;font-weight:600}
+        body{margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;background:var(--bg);color:#222}
+        header{display:flex;justify-content:space-between;align-items:center;padding:18px 24px}
+        .brand{display:flex;align-items:center;gap:12px}
+        .sun{width:46px;height:46px;border-radius:50%;background:linear-gradient(135deg,#fff4e6,#ffd08a);display:flex;align-items:center;justify-content:center;box-shadow:0 6px 18px rgba(240,140,6,0.12)}
+        nav a{margin-left:14px;color:#333;text-decoration:none;font-weight:600}
 
-            .wrap{max-width:1100px;margin:28px auto;padding:0 20px}
-            .hero{display:flex;gap:24px;align-items:center}
-            .hero-left{flex:1}
-            .hero-right{width:360px}
-            h1{font-size:36px;margin:0 0 10px}
-            p.lead{color:var(--muted);margin:0 0 16px}
-            .cta{display:inline-block;background:var(--accent);color:#fff;padding:12px 16px;border-radius:12px;text-decoration:none;font-weight:700}
+        .wrap{max-width:1100px;margin:28px auto;padding:0 20px}
+        .hero{display:flex;gap:24px;align-items:center}
+        .hero-left{flex:1}
+        .hero-right{width:360px}
+        h1{font-size:36px;margin:0 0 10px}
+        p.lead{color:var(--muted);margin:0 0 16px}
+        .cta{display:inline-block;background:var(--accent);color:#fff;padding:12px 16px;border-radius:12px;text-decoration:none;font-weight:700}
 
-            .services{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:16px;margin:22px 0}
-            .svc{background:var(--card);padding:16px;border-radius:12px;box-shadow:0 6px 18px rgba(16,24,40,0.04)}
-            .svc h3{margin:0 0 8px}
-            .price{font-weight:700;color:var(--accent)}
+        .services{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:16px;margin:22px 0}
+        .svc{background:var(--card);padding:16px;border-radius:12px;box-shadow:0 6px 18px rgba(16,24,40,0.04)}
+        .svc h3{margin:0 0 8px}
+        .svc p{margin:0;color:var(--muted);font-size:14px}
+        .price{font-weight:700;color:var(--accent)}
 
-            .gallery{display:flex;gap:10px;margin-top:18px}
-            .gallery img{width:100%;height:120px;object-fit:cover;border-radius:10px}
+        .gallery{display:flex;gap:10px;margin-top:18px}
+        .gallery img{width:100%;height:120px;object-fit:cover;border-radius:10px}
 
-            .contact{display:grid;grid-template-columns:1fr 340px;gap:18px;margin-top:22px}
-            .contact-card{background:var(--card);padding:18px;border-radius:12px}
-            .contact-card h3{margin-top:0}
-            .contact-list{line-height:1.6;color:var(--muted)}
+        .contact{display:grid;grid-template-columns:1fr 340px;gap:18px;margin-top:22px}
+        .contact-card{background:var(--card);padding:18px;border-radius:12px}
+        .contact-card h3{margin-top:0}
+        .contact-list{line-height:1.6;color:var(--muted)}
 
-            footer{margin:36px 0;text-align:center;color:var(--muted)}
+        footer{margin:36px 0;text-align:center;color:var(--muted)}
 
-            @media (max-width:880px){.hero{flex-direction:column}.contact{grid-template-columns:1fr}.hero-right{width:100%}}
-        </style>
-    </head>
-    <body>
-        <header class="wrap">
-            <div class="brand">
-                <div class="sun" aria-hidden="true">☀️</div>
-                <div>
-                    <div style="font-weight:800">Sunkiss</div>
-                    <div style="font-size:12px;color:var(--muted)">Салон загара</div>
+        /* Slideshow */
+        .slideshow{max-width:1100px;margin:12px auto;padding:0 20px;position:relative;overflow:hidden;border-radius:12px}
+        .slides{display:flex;transition:transform .6s ease}
+        .slide{min-width:100%;flex-shrink:0}
+        .slide img{width:100%;height:320px;object-fit:cover;display:block}
+        .prev,.next{position:absolute;top:50%;transform:translateY(-50%);background:rgba(0,0,0,0.35);color:#fff;border:none;padding:10px;border-radius:8px;cursor:pointer}
+        .prev{left:12px}.next{right:12px}
+        .dots{position:absolute;left:50%;transform:translateX(-50%);bottom:12px;display:flex;gap:8px}
+        .dot{width:10px;height:10px;border-radius:50%;background:rgba(255,255,255,0.5);cursor:pointer}
+        .dot.active{background:var(--accent)}
+        @media (max-width:880px){.slide img{height:180px}}
+
+        @media (max-width:880px){.hero{flex-direction:column}.contact{grid-template-columns:1fr}.hero-right{width:100%}}
+    </style>
+</head>
+<body>
+    <header class="wrap">
+        <div class="brand">
+            <div class="sun" aria-hidden="true">☀️</div>
+            <div>
+                <div style="font-weight:800">Sunkiss</div>
+                <div style="font-size:12px;color:var(--muted)">Салон загара</div>
+            </div>
+        </div>
+        <nav>
+            <a href="#services">Услуги</a>
+            <a href="#gallery">Галерея</a>
+            <a class="cta" href="#contact">Записаться</a>
+        </nav>
+    </header>
+
+    <!-- Slideshow -->
+    <section class="slideshow" aria-label="Слайдер Sunkiss">
+        <div class="slides" id="slides">
+            <div class="slide"><img src="https://images.unsplash.com/photo-1503264116251-35a269479413?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Sunkiss 1"></div>
+            <div class="slide"><img src="https://images.unsplash.com/photo-1504198453319-5ce911bafcde?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Sunkiss 2"></div>
+            <div class="slide"><img src="https://images.unsplash.com/photo-1499084732479-de2c02d45fc4?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Sunkiss 3"></div>
+        </div>
+        <button class="prev" id="prev" aria-label="Предыдущий">‹</button>
+        <button class="next" id="next" aria-label="Следующий">›</button>
+        <div class="dots" id="dots"></div>
+    </section>
+
+    <main class="wrap">
+        <section class="hero">
+            <div class="hero-left">
+                <h1>Теплый загар и забота о коже</h1>
+                <p class="lead">Качественные процедуры, индивидуальный подход и комфортная атмосфера в центре Києва.</p>
+                <a class="cta" href="#contact">Записаться</a>
+                <div style="margin-top:12px;color:var(--muted)">или звоните: <strong style="color:#222">+38 (050) 123‑4567</strong> — Светлана Петровна</div>
+            </div>
+            <div class="hero-right">
+                <div style="background:linear-gradient(180deg,#fff6eb,#ffe1b8);padding:18px;border-radius:12px;box-shadow:0 8px 30px rgba(16,24,40,0.06)">
+                    <h3 style="margin:0 0 8px">Специальное предложение</h3>
+                    <p style="margin:0;color:var(--muted)">Первое посещение — скидка 20% на любой сеанс.</p>
                 </div>
             </div>
-            <nav>
-                <a href="#services">Услуги</a>
-                <a href="#gallery">Галерея</a>
-                <a class="cta" href="#contact">Записаться</a>
-            </nav>
-        </header>
+        </section>
 
-        <main class="wrap">
-            <section class="hero">
-                <div class="hero-left">
-                    <h1>Теплый загар и забота о коже</h1>
-                    <p class="lead">Качественные процедуры, индивидуальный подход и комфортная атмосфера в центре Киева.</p>
-                    <a class="cta" href="#contact">Записаться</a>
-                    <div style="margin-top:12px;color:var(--muted)">или звоните: <strong style="color:#222">+38 (050) 123‑4567</strong> — Светлана Петровна</div>
-                </div>
-                <div class="hero-right">
-                    <div style="background:linear-gradient(180deg,#fff6eb,#ffe1b8);padding:18px;border-radius:12px;box-shadow:0 8px 30px rgba(16,24,40,0.06)">
-                        <h3 style="margin:0 0 8px">Специальное предложение</h3>
-                        <p style="margin:0;color:var(--muted)">Первое посещение — скидка 20% на любой сеанс.</p>
-                    </div>
-                </div>
-            </section>
+        <section id="services" class="services">
+            <div class="svc">
+                <h3>Солярий</h3>
+                <p class="price">от 150 ₴ / сеанс</p>
+                <p style="margin-top:8px;color:var(--muted)">Профессиональные лампы, безопасный режим и чистота кабины.</p>
+            </div>
+            <div class="svc">
+                <h3>Спрей‑загар</h3>
+                <p class="price">от 450 ₴</p>
+                <p style="margin-top:8px;color:var(--muted)">Равномерный бронзовый оттенок моментально.</p>
+            </div>
+            <div class="svc">
+                <h3>Уход за кожей</h3>
+                <p class="price">от 300 ₴</p>
+                <p style="margin-top:8px;color:var(--muted)">Пилинги, маски и профессиональные процедуры.</p>
+            </div>
+            <div class="svc">
+                <h3>Абонементы</h3>
+                <p class="price">от 1200 ₴ / мес.</p>
+                <p style="margin-top:8px;color:var(--muted)">Экономичные пакеты для регулярных клиентов.</p>
+            </div>
+        </section>
 
-            <section id="services" class="services">
-                <div class="svc">
-                    <h3>Солярий</h3>
-                    <p class="price">от 150 ₴ / сеанс</p>
-                    <p style="margin-top:8px;color:var(--muted)">Профессиональные лампы, безопасный режим и чистота кабины.</p>
-                </div>
-                <div class="svc">
-                    <h3>Спрей‑загар</h3>
-                    <p class="price">от 450 ₴</p>
-                    <p style="margin-top:8px;color:var(--muted)">Равномерный бронзовый оттенок моментально.</p>
-                </div>
-                <div class="svc">
-                    <h3>Уход за кожей</h3>
-                    <p class="price">от 300 ₴</p>
-                    <p style="margin-top:8px;color:var(--muted)">Пилинги, маски и профессиональные процедуры.</p>
-                </div>
-                <div class="svc">
-                    <h3>Абонементы</h3>
-                    <p class="price">от 1200 ₴ / мес.</p>
-                    <p style="margin-top:8px;color:var(--muted)">Экономичные пакеты для регулярных клиентов.</p>
-                </div>
-            </section>
+        <section id="gallery" class="gallery">
+            <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="1">
+            <img src="https://images.unsplash.com/photo-1521334884684-d80222895322?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="2">
+            <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="3">
+            <img src="https://images.unsplash.com/photo-1499084732479-de2c02d45fc4?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="4">
+        </section>
 
-            <section id="gallery" class="gallery">
-                <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="1">
-                <img src="https://images.unsplash.com/photo-1521334884684-d80222895322?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="2">
-                <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="3">
-                <img src="https://images.unsplash.com/photo-1499084732479-de2c02d45fc4?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="4">
-            </section>
-
-            <section id="contact" class="contact">
-                <div class="contact-card">
-                    <h3>Контакты</h3>
-                    <div class="contact-list">
-                        <div><strong>Адрес:</strong> м. Київ, вул. Перемоги, 12 (м. Святошино)</div>
-                        <div><strong>Телефон:</strong> <a href="tel:+380501234567">+38 (050) 123‑4567</a> — Светлана Петровна</div>
-                        <div><strong>Часы роботи:</strong> щодня 10:00–22:00</div>
-                    </div>
+        <section id="contact" class="contact">
+            <div class="contact-card">
+                <h3>Контакты</h3>
+                <div class="contact-list">
+                    <div><strong>Адрес:</strong> м. Київ, вул. Перемоги, 12 (м. Святошино)</div>
+                    <div><strong>Телефон:</strong> <a href="tel:+380501234567">+38 (050) 123‑4567</a> — Светлана Петровна</div>
+                    <div><strong>Часы роботи:</strong> щодня 10:00–22:00</div>
                 </div>
+            </div>
 
-                <aside style="background:#fff;padding:16px;border-radius:12px;box-shadow:0 6px 18px rgba(16,24,40,0.04)">
-                    <h3 style="margin-top:0">Карта</h3>
-                    <div style="width:100%;height:220px;background:#eee;border-radius:8px;display:flex;align-items:center;justify-content:center;color:#999">(Iframe карты можно вставить здесь)</div>
-                </aside>
-            </section>
-        </main>
+            <aside style="background:#fff;padding:16px;border-radius:12px;box-shadow:0 6px 18px rgba(16,24,40,0.04)">
+                <h3 style="margin-top:0">Карта</h3>
+                <div style="width:100%;height:220px;background:#eee;border-radius:8px;display:flex;align-items:center;justify-content:center;color:#999">(Iframe карты можно вставить здесь)</div>
+            </aside>
+        </section>
+    </main>
 
-        <footer>
-            © Sunkiss — Салон загара · Київ
-        </footer>
-    </body>
-    </html>
+    <footer>
+        © Sunkiss — Салон загара · Київ
+    </footer>
+
+    <script>
+        (function(){
+            const slidesEl = document.getElementById('slides');
+            const slides = slidesEl.children;
+            const dotsEl = document.getElementById('dots');
+            const prev = document.getElementById('prev');
+            const next = document.getElementById('next');
+            let index = 0;
+            const total = slides.length;
+
+            function makeDots(){
+                for(let i=0;i<total;i++){const d=document.createElement('div');d.className='dot';d.dataset.i=i;d.addEventListener('click',()=>goTo(i));dotsEl.appendChild(d)}
+            }
+            function update(){
+                slidesEl.style.transform = 'translateX('+(-index*100)+'%)';
+                Array.from(dotsEl.children).forEach((d,i)=>d.classList.toggle('active', i===index));
+            }
+            function nextSlide(){ index = (index+1) % total; update(); }
+            function prevSlide(){ index = (index-1+total) % total; update(); }
+            function goTo(i){ index = i; update(); }
+
+            makeDots(); update();
+            let timer = setInterval(nextSlide, 4000);
+            next.addEventListener('click', ()=>{ nextSlide(); resetTimer(); });
+            prev.addEventListener('click', ()=>{ prevSlide(); resetTimer(); });
+            function resetTimer(){ clearInterval(timer); timer = setInterval(nextSlide,4000); }
+        })();
+    </script>
+</body>
+</html>
