--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </section>
     </div>
     <footer>
-        © 2026 Алексей — Системный Администратор. Все права защищены.
+        © 2026 Алексей — Системный Администратор. Все права защищены.!!!
     </footer>
 </body>
 </html>
