--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ footer {
             <p data-i18n="subtitle"></p>
             <a href="#contact" class="btn" data-i18n="button"></a>
         </div>
-        <img src="https://images.unsplash.com/photo-1537432376769-00a0c1b6d5a1" alt="IT Support">
+        <img src="https://images.unsplash.com/photo-1537432376769-00a0c1b6d5a1" alt="IT Supportossssssssss">
     </div>
 </header>
 
