--- a/index.html
+++ b/index.html
@@ -6,39 +6,96 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+/* ===== БАЗА ===== */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Segoe UI", Arial, sans-serif;
 }
 
 body {
-    background: #e0f2fe;
     color: #083344;
     line-height: 1.6;
+    background: linear-gradient(
+        180deg,
+        #7dd3fc,
+        #38bdf8,
+        #0ea5e9,
+        #0284c7
+    );
+    background-size: 100% 400%;
+    animation: waterMove 20s ease-in-out infinite;
+}
+
+/* АНИМАЦИЯ ВОДЫ */
+@keyframes waterMove {
+    0% { background-position: 0% 0%; }
+    50% { background-position: 0% 100%; }
+    100% { background-position: 0% 0%; }
+}
+
+/* ===== ПУЗЫРЬКИ ===== */
+.bubbles {
+    position: fixed;
+    inset: 0;
+    pointer-events: none;
+    overflow: hidden;
+    z-index: 0;
+}
+
+.bubbles span {
+    position: absolute;
+    bottom: -120px;
+    background: rgba(255,255,255,0.45);
+    border-radius: 50%;
+    animation: bubbleUp linear infinite;
+}
+
+@keyframes bubbleUp {
+    0%   { transform: translateY(0) translateX(0); opacity: 0; }
+    10%  { opacity: 1; }
+    100% { transform: translateY(-120vh) translateX(40px); opacity: 0; }
+}
+
+/* РАЗНЫЕ ПУЗЫРЬКИ */
+.bubbles span:nth-child(1) { left: 5%;  width: 10px; height: 10px; animation-duration: 6s; }
+.bubbles span:nth-child(2) { left: 15%; width: 18px; height: 18px; animation-duration: 9s; }
+.bubbles span:nth-child(3) { left: 25%; width: 8px;  height: 8px;  animation-duration: 5s; }
+.bubbles span:nth-child(4) { left: 35%; width: 14px; height: 14px; animation-duration: 7s; }
+.bubbles span:nth-child(5) { left: 45%; width: 22px; height: 22px; animation-duration: 11s; }
+.bubbles span:nth-child(6) { left: 55%; width: 12px; height: 12px; animation-duration: 6s; }
+.bubbles span:nth-child(7) { left: 65%; width: 16px; height: 16px; animation-duration: 8s; }
+.bubbles span:nth-child(8) { left: 75%; width: 9px;  height: 9px;  animation-duration: 5s; }
+.bubbles span:nth-child(9) { left: 85%; width: 20px; height: 20px; animation-duration: 10s; }
+.bubbles span:nth-child(10){ left: 95%; width: 11px; height: 11px; animation-duration: 6s; }
+
+/* ===== КОНТЕНТ ===== */
+header, section, footer {
+    position: relative;
+    z-index: 1;
 }
 
 header {
-    background: linear-gradient(to bottom, #0284c7, #0ea5e9);
-    color: white;
-    padding: 80px 20px;
+    padding: 90px 20px;
     text-align: center;
+    color: white;
 }
 
 header h1 {
-    font-size: 2.8rem;
+    font-size: 3rem;
     margin-bottom: 10px;
 }
 
 header p {
     font-size: 1.2rem;
+    opacity: 0.9;
 }
 
 section {
     max-width: 1100px;
     margin: auto;
-    padding: 60px 20px;
+    padding: 70px 20px;
 }
 
 h2 {
@@ -47,17 +104,23 @@ h2 {
     font-size: 2rem;
 }
 
+/* ===== КАРТОЧКИ РЫБОК ===== */
 .fish-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
     gap: 25px;
 }
 
 .card {
-    background: white;
-    border-radius: 14px;
+    background: rgba(255,255,255,0.92);
+    border-radius: 16px;
     overflow: hidden;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+    transition: transform 0.3s;
+}
+
+.card:hover {
+    transform: translateY(-8px);
 }
 
 .card img {
@@ -70,6 +133,7 @@ h2 {
     padding: 20px;
 }
 
+/* ===== СОВЕТЫ ===== */
 .tips {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -77,11 +141,12 @@ h2 {
 }
 
 .tip {
-    background: #bae6fd;
+    background: rgba(186,230,253,0.9);
     padding: 25px;
-    border-radius: 14px;
+    border-radius: 16px;
 }
 
+/* ===== ГАЛЕРЕЯ ===== */
 .gallery {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -90,11 +155,12 @@ h2 {
 
 .gallery img {
     width: 100%;
-    border-radius: 12px;
+    border-radius: 14px;
 }
 
+/* ===== FOOTER ===== */
 footer {
-    background: #0284c7;
+    background: rgba(2,132,199,0.9);
     color: white;
     text-align: center;
     padding: 20px;
@@ -104,19 +170,25 @@ footer {
 
 <body>
 
+<!-- ПУЗЫРЬКИ -->
+<div class="bubbles">
+    <span></span><span></span><span></span><span></span><span></span>
+    <span></span><span></span><span></span><span></span><span></span>
+</div>
+
 <header>
     <h1>Мир аквариумных рыбок</h1>
-    <p>Красота, спокойствие и жизнь под водой</p>
+    <p>Спокойствие, красота и жизнь под водой</p>
 </header>
 
 <section>
-    <h2>Популярные аквариумные рыбки</h2>
+    <h2>Популярные рыбки</h2>
     <div class="fish-list">
         <div class="card">
             <img src="https://images.unsplash.com/photo-1516683037151-9a17603a8dc7" alt="Гуппи">
             <div>
                 <h3>Гуппи</h3>
-                <p>Неприхотливые и яркие рыбки, идеально подходят для начинающих.</p>
+                <p>Яркие и неприхотливые рыбки для начинающих.</p>
             </div>
         </div>
 
@@ -124,7 +196,7 @@ footer {
             <img src="https://images.unsplash.com/photo-1544551763-ced87a2f79c2" alt="Скалярия">
             <div>
                 <h3>Скалярия</h3>
-                <p>Элегантные рыбки с треугольной формой тела.</p>
+                <p>Элегантные рыбки с плавными движениями.</p>
             </div>
         </div>
 
@@ -132,7 +204,7 @@ footer {
             <img src="https://images.unsplash.com/photo-1518837695005-2083093ee35b" alt="Золотая рыбка">
             <div>
                 <h3>Золотая рыбка</h3>
-                <p>Классика аквариумистики, известная во всём мире.</p>
+                <p>Классика аквариумистики.</p>
             </div>
         </div>
     </div>
@@ -142,20 +214,20 @@ footer {
     <h2>Советы по уходу</h2>
     <div class="tips">
         <div class="tip">
-            <h3>💧 Чистая вода</h3>
-            <p>Регулярно меняйте 20–30% воды каждую неделю.</p>
+            <h3>💧 Вода</h3>
+            <p>Меняйте 20–30% воды каждую неделю.</p>
         </div>
         <div class="tip">
             <h3>🌡 Температура</h3>
-            <p>Поддерживайте температуру, подходящую для выбранных рыб.</p>
+            <p>Следите за стабильной температурой.</p>
         </div>
         <div class="tip">
-            <h3>🍽 Кормление</h3>
-            <p>Не перекармливайте — лучше меньше, но регулярно.</p>
+            <h3>🍽 Корм</h3>
+            <p>Не перекармливайте рыбок.</p>
         </div>
         <div class="tip">
             <h3>🌿 Растения</h3>
-            <p>Живые растения улучшают экосистему аквариума.</p>
+            <p>Живые растения улучшают экосистему.</p>
         </div>
     </div>
 </section>
@@ -163,10 +235,10 @@ footer {
 <section>
     <h2>Галерея</h2>
     <div class="gallery">
-        <img src="https://images.unsplash.com/photo-1522069169874-c58ec4b76be5" alt="">
-        <img src="https://images.unsplash.com/photo-1517849845537-4d257902454a" alt="">
-        <img src="https://images.unsplash.com/photo-1517836357463-d25dfeac3438" alt="">
-        <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee" alt="">
+        <img src="https://images.unsplash.com/photo-1522069169874-c58ec4b76be5">
+        <img src="https://images.unsplash.com/photo-1517849845537-4d257902454a">
+        <img src="https://images.unsplash.com/photo-1517836357463-d25dfeac3438">
+        <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee">
     </div>
 </section>
 
